@@ -1,90 +1,104 @@
 package com.debloopers.chibchaweb.service;
 
+import com.debloopers.chibchaweb.domain.Administrador;
+import com.debloopers.chibchaweb.domain.ClienteDirecto;
+import com.debloopers.chibchaweb.domain.Distribuidor;
+import com.debloopers.chibchaweb.domain.Empleado;
 import com.debloopers.chibchaweb.domain.Usuario;
 import com.debloopers.chibchaweb.model.UsuarioDTO;
-import com.debloopers.chibchaweb.repos.*;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.security.crypto.password.PasswordEncoder;
+import com.debloopers.chibchaweb.repos.AdministradorRepository;
+import com.debloopers.chibchaweb.repos.ClienteDirectoRepository;
+import com.debloopers.chibchaweb.repos.DistribuidorRepository;
+import com.debloopers.chibchaweb.repos.EmpleadoRepository;
+import com.debloopers.chibchaweb.repos.UsuarioRepository;
+import com.debloopers.chibchaweb.util.NotFoundException;
+import java.util.List;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 
-import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class UsuarioService {
 
-    @Autowired
-    private UsuarioRepository usuarioRepository;
+    private final UsuarioRepository usuarioRepository;
+    private final ClienteDirectoRepository clienteDirectoRepository;
+    private final AdministradorRepository administradorRepository;
+    private final EmpleadoRepository empleadoRepository;
+    private final DistribuidorRepository distribuidorRepository;
 
-    @Autowired
-    private ClienteDirectoRepository clienteRepository;
-
-    @Autowired
-    private AdministradorRepository administradorRepository;
-
-    @Autowired
-    private RegistradorRepository registradorRepository;
-
-    @Autowired
-    private EmpleadoRepository empleadoRepository;
-
-    @Autowired
-    private PasswordEncoder passwordEncoder;
-
-    public boolean create(UsuarioDTO dto) {
-        try {
-            Usuario usuario = new Usuario();
-            usuario.setCorreoUsuario(dto.getCorreoUsuario());
-            usuario.setContrasena(passwordEncoder.encode(dto.getContrasena()));
-            usuario.setRolUsuario(dto.getRolUsuario());
-            usuarioRepository.save(usuario);
-            return true;
-        } catch (Exception e) {
-            return false;
-        }
-    }
-
-    public UsuarioDTO findById(Integer id) {
-        return usuarioRepository.findById(id)
-                .map(this::toDto)
-                .orElse(null);
-    }
-
-    public boolean updateByCorreo(String correo, UsuarioDTO dto) {
-        try {
-            Usuario usuario = usuarioRepository.findByCorreoUsuario(correo);
-            if (usuario == null) {
-                return false;
-            }
-
-            if (dto.getContrasena() != null) {
-                usuario.setContrasena(passwordEncoder.encode(dto.getContrasena()));
-            }
-            usuarioRepository.save(usuario);
-            return true;
-        } catch (Exception e) {
-            return false;
-        }
+    public UsuarioService(final UsuarioRepository usuarioRepository,
+            final ClienteDirectoRepository clienteDirectoRepository,
+            final AdministradorRepository administradorRepository,
+            final EmpleadoRepository empleadoRepository,
+            final DistribuidorRepository distribuidorRepository) {
+        this.usuarioRepository = usuarioRepository;
+        this.clienteDirectoRepository = clienteDirectoRepository;
+        this.administradorRepository = administradorRepository;
+        this.empleadoRepository = empleadoRepository;
+        this.distribuidorRepository = distribuidorRepository;
     }
 
     public List<UsuarioDTO> findAll() {
-        return usuarioRepository.findAll().stream()
-                .map(this::toDto)
-                .collect(Collectors.toList());
+        final List<Usuario> usuarios = usuarioRepository.findAll(Sort.by("idUsuario"));
+        return usuarios.stream()
+                .map(usuario -> mapToDTO(usuario, new UsuarioDTO()))
+                .toList();
     }
 
-    private UsuarioDTO toDto(Usuario u) {
-        UsuarioDTO dto = new UsuarioDTO();
-        dto.setIdUsuario(u.getIdUsuario());
-        dto.setCorreoUsuario(u.getCorreoUsuario());
-        dto.setRolUsuario(u.getRolUsuario());
-        // contraseña no se devuelve, eliminar esta linea al terminar el desarrollo
-        dto.setContrasena(u.getContrasena());
-
-        if (u.getCliente() != null) dto.setIdCliente(u.getCliente().getIdCliente());
-        if (u.getAdmin() != null) dto.setIdAdmin(u.getAdmin().getIdAdmin());
-        if (u.getEmpleado() != null) dto.setIdEmpleado(u.getEmpleado().getIdEmpleado());
-        if (u.getRegistrador() != null) dto.setIdRegistrador(u.getRegistrador().getIdRegistrador());
-        return dto;
+    public UsuarioDTO get(final Integer idUsuario) {
+        return usuarioRepository.findById(idUsuario)
+                .map(usuario -> mapToDTO(usuario, new UsuarioDTO()))
+                .orElseThrow(NotFoundException::new);
     }
+
+    public Integer create(final UsuarioDTO usuarioDTO) {
+        final Usuario usuario = new Usuario();
+        mapToEntity(usuarioDTO, usuario);
+        return usuarioRepository.save(usuario).getIdUsuario();
+    }
+
+    public void update(final Integer idUsuario, final UsuarioDTO usuarioDTO) {
+        final Usuario usuario = usuarioRepository.findById(idUsuario)
+                .orElseThrow(NotFoundException::new);
+        mapToEntity(usuarioDTO, usuario);
+        usuarioRepository.save(usuario);
+    }
+
+    public void delete(final Integer idUsuario) {
+        usuarioRepository.deleteById(idUsuario);
+    }
+
+    private UsuarioDTO mapToDTO(final Usuario usuario, final UsuarioDTO usuarioDTO) {
+        usuarioDTO.setIdUsuario(usuario.getIdUsuario());
+        usuarioDTO.setCorreoUsuario(usuario.getCorreoUsuario());
+        usuarioDTO.setContrasena(usuario.getContrasena());
+        usuarioDTO.setRol(usuario.getRol());
+        usuarioDTO.setEstado(usuario.getEstado());
+        usuarioDTO.setCliente(usuario.getCliente() == null ? null : usuario.getCliente().getIdCliente());
+        usuarioDTO.setAdmin(usuario.getAdmin() == null ? null : usuario.getAdmin().getIdAdmin());
+        usuarioDTO.setEmpleado(usuario.getEmpleado() == null ? null : usuario.getEmpleado().getIdEmpleado());
+        usuarioDTO.setDistribuidor(usuario.getDistribuidor() == null ? null : usuario.getDistribuidor().getIdDistribuidor());
+        return usuarioDTO;
+    }
+
+    private Usuario mapToEntity(final UsuarioDTO usuarioDTO, final Usuario usuario) {
+        usuario.setCorreoUsuario(usuarioDTO.getCorreoUsuario());
+        usuario.setContrasena(usuarioDTO.getContrasena());
+        usuario.setRol(usuarioDTO.getRol());
+        usuario.setEstado(usuarioDTO.getEstado());
+        final ClienteDirecto cliente = usuarioDTO.getCliente() == null ? null : clienteDirectoRepository.findById(usuarioDTO.getCliente())
+                .orElseThrow(() -> new NotFoundException("cliente not found"));
+        usuario.setCliente(cliente);
+        final Administrador admin = usuarioDTO.getAdmin() == null ? null : administradorRepository.findById(usuarioDTO.getAdmin())
+                .orElseThrow(() -> new NotFoundException("admin not found"));
+        usuario.setAdmin(admin);
+        final Empleado empleado = usuarioDTO.getEmpleado() == null ? null : empleadoRepository.findById(usuarioDTO.getEmpleado())
+                .orElseThrow(() -> new NotFoundException("empleado not found"));
+        usuario.setEmpleado(empleado);
+        final Distribuidor distribuidor = usuarioDTO.getDistribuidor() == null ? null : distribuidorRepository.findById(usuarioDTO.getDistribuidor())
+                .orElseThrow(() -> new NotFoundException("distribuidor not found"));
+        usuario.setDistribuidor(distribuidor);
+        return usuario;
+    }
+
 }
